# fempcli

./: CMakeLists.txt  README.md
.github/workflows/: cmake-ubuntu.yml
src/: CMakeLists.txt
